--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
     "es2015": "0.0.0",
     "html-webpack-plugin": "^2.30.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-modal": "^2.2.4",
     "react-router": "^4.2.0",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   }
 }
