--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "react-router": "^4.2.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
+  },
+  "devDependencies": {
+    "isomorphic-fetch": "^2.2.1",
+    "react-router-dom": "^4.2.2"
   }
 }
