--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-infinite-scroller": "^1.0.15",
     "react-modal": "^2.2.4",
+    "react-npm-formatted-relative-date": "^1.2.0",
     "react-router": "^4.2.0"
   },
   "devDependencies": {
