--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Br3d89/kottans#readme",
   "dependencies": {
+    "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-infinite-scroller": "^1.0.15",
@@ -26,9 +27,6 @@
     "react-router": "^4.2.0"
   },
   "devDependencies": {
-    "image-webpack-loader": "^3.4.1",
-    "isomorphic-fetch": "^2.2.1",
-    "react-router-dom": "^4.2.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -38,6 +36,9 @@
     "es2015": "0.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.1",
+    "isomorphic-fetch": "^2.2.1",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5"
